Repair images in Doku

--- a/Leitrechner_Doku.html
+++ b/Leitrechner_Doku.html
@@ -555,7 +555,7 @@ body.book #toc,body.book #preamble,body.book h1.sect0,body.book .sect1>h2{page-b
 <h3 id="_teilprojekt_leitrechner">2.1. Teilprojekt Leitrechner</h3>
 <div class="imageblock right">
 <div class="content">
-<img src="Documentation/images/uebersicht.png" alt="Überischt" width="80%">
+<img src="./Documentation/images/uebersicht.png" alt="Überischt" width="80%">
 </div>
 <div class="title">Abbildung 1. Übersicht Carlos</div>
 </div>
@@ -763,7 +763,7 @@ Dabei haben die Testpersonen Kenntnisse über den Code.</p>
 <h4 id="_user_interface">2.2.6. User Interface</h4>
 <div class="imageblock">
 <div class="content">
-<img src="Documentation/images/ui-webapp.png" alt="User Interface Webapp">
+<img src="./Documentation/images/ui-webapp.png" alt="User Interface Webapp">
 </div>
 <div class="title">Abbildung 2. Webapp UI</div>
 </div>
@@ -804,7 +804,7 @@ Diese sendet eine HTTP GET-Anfrage an den Server. Die Rückgabe(JSON-Object) wir
 <hr>
 <div class="imageblock">
 <div class="content">
-<img src="Documentation/images/wappfd.svg" alt="Static" width="450">
+<img src="./Documentation/images/wappfd.svg" alt="Static" width="450">
 </div>
 <div class="title">Abbildung 3. Flussdiagramm</div>
 </div>
@@ -877,9 +877,9 @@ let query = "SELECT id, produkt_id, produkt_anzahl, status FROM Auftrag";
 </div>
 </div>
 <div class="paragraph">
-<p>Beim Versuch die Variable auszulesen wird die function <strong>getData()</strong> ausgeführt.
+<p>Beim Versuch, die Variable auszulesen, wird die function <strong>getData()</strong> ausgeführt.
 Diese baut aus den übergebenen Parametern eine SQL-Query und sendet die Abfrage an die Datenbank.
-Die Antwort vom Datenbankserver wird daraufhin in ein JSON-Object umgewandelt und an den vorher genannten fetch Befehl weitergereicht.</p>
+Die Antwort vom Datenbankserver, wird daraufhin in ein JSON-Object umgewandelt und an den vorher genannten fetch Befehl weitergereicht.</p>
 </div>
 <div class="paragraph">
 <p>Auf Erhalt des Json-Object&#8217;s wird dieser an die <strong>generate_table()</strong> weitergereicht, die dann aus den erhaltenen Werten eine Tabelle generiert und in die Seite einfügt.</p>
@@ -995,7 +995,7 @@ Die Antwort vom Datenbankserver wird daraufhin in ein JSON-Object umgewandelt un
 </div>
 <div id="footer">
 <div id="footer-text">
-Last updated 2022-07-09 12:33:43 +0200
+Last updated 2022-07-12 18:55:57 +0200
 </div>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/prettify/r298/run_prettify.min.js"></script>
