Replace begin with bereit in Leitrechner.adoc

--- a/Leitrechner_Doku.html
+++ b/Leitrechner_Doku.html
@@ -618,7 +618,7 @@ Es werden Aufträge, Produkte, Adressen und User gespeichert, allerdings benöti
 </div>
 </li>
 <li>
-<p>Der Server wartet auf ein "begin" vom Client und sendet dann den nächsten offenen Auftrag (siehe <a href="#_database_manager">Database Manager</a>) über die Socket Verbindung (<strong>output.println()</strong>) an den Client.</p>
+<p>Der Server wartet auf ein "bereit" vom Client und sendet dann den nächsten offenen Auftrag (siehe <a href="#_database_manager">Database Manager</a>) über die Socket Verbindung (<strong>output.println()</strong>) an den Client.</p>
 <div class="listingblock">
 <div class="content">
 <pre class="prettyprint highlight"><code data-lang="java">} else if(answer.equals("bereit")){
@@ -676,9 +676,9 @@ Damit der Status des Auftrags nach der Produktion geändert werden kann haben wi
 <div class="ulist">
 <ul>
 <li>
-<p>Beim Start des Programms, wird um die Kommunikation zu starten ein "begin" vom Client zum Server gesendet. Allerdings ist hinter dem "begin" kein Auftrag hinterlegt, deshalb soll auch nichts in der Datenbank aktualisiert werden und es soll auch kein Element aus der Auftrag Liste entfernt werden.<br>
+<p>Beim Start des Programms, wird um die Kommunikation zu starten ein "bereit" vom Client zum Server gesendet. Allerdings ist hinter dem "bereit" kein Auftrag hinterlegt, deshalb soll auch nichts in der Datenbank aktualisiert werden und es soll auch kein Element aus der Auftrag Liste entfernt werden.<br>
 Man hatte das Problem das der erste Auftrag schon auf "fertig" gesetzt wurde, bevor er durch die Fertigungsstraße gelaufen ist.<br>
-Gelöst wurde dies indem wir eienen weiteren if-Fall hinzugefügt haben der schaut ob die Nachricht vom Client nur "begin" enthällt und keine Auftragsnummmer.</p>
+Gelöst wurde dies indem wir eienen weiteren if-Fall hinzugefügt haben der schaut ob die Nachricht vom Client nur "bereit" enthällt und keine Auftragsnummmer.</p>
 <div class="listingblock">
 <div class="content">
 <pre class="prettyprint highlight"><code data-lang="java">...
